Fix canvas positioning on narrow screens

--- a/src/style/layouts/_default.scss
+++ b/src/style/layouts/_default.scss
@@ -6,5 +6,7 @@
 }
 
 @media all and (max-width: 768px) {
-  #page #sidebar { width: 100%; }
+  #page { flex-direction: column;
+    /*#sidebar { width: 100%; }*/
+  }
 }
